k8s/auctions-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: auctions-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: auctions
  template:
    metadata:
      labels:
        component: auctions
    spec:
      containers:
        - name: auctions
          image: tamshalev/auctions
          ports:
            - containerPort: 5000
