k8s/users-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: users
  template:
    metadata:
      labels:
        component: users
    spec:
      containers:
        - name: users
          image: tamshalev/users
          ports:
            - containerPort: 3000
