k8s/auctions-cluste-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auctions-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auctions
  ports:
    - port: 5000
      targetPort: 5000
