k8s/users-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: users-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: users
  ports:
    - port: 3000
      targetPort: 3000
