k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /users/?(.*)
            backend:
              serviceName: users-cluster-ip-service
              servicePort: 3000
          - path: /auctions/?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: auctions-cluster-ip-service
              servicePort: 5000
